--- a/templates/nav.html
+++ b/templates/nav.html
@@ -9,27 +9,39 @@
     <div data-tabs>
         <div class="login-form">
             <h1 data-tab="login">Log in</h1>
-            <form method="POST" action="/user/new">
-                <label for="user-name">Username</label>
-                <input name="user-name" type="text" />
+            <form method="POST" action="/user/login">
+                <label for="username">Username</label>
+                <input name="username" type="text" />
                 <label for="password">Password</label>
                 <input name="password" type="password" />
-                {{/* todo: restore password */}}
+                <a class="go-to-restore">Trouble logging in?</a>
                 <button type="submit">Log in</button>
             </form>
         </div>
         <div class="login-form">
             <h1 data-tab="signup">Sign up</h1>
             <form method="POST" action="/user/new">
-                <label for="user-name">Username</label>
-                <input name="user-name" type="text" />
+                <label for="username">Username</label>
+                <input name="username" type="text" />
                 <label for="password">Password</label>
                 <input name="password" type="password" />
                 <label for="email">Email</label>
                 <input name="email" type="email" />
                 {{/* todo: recaptcha, tos, privacy policy */}}
-                <p class="tos-notice">By signing up you agree blah-blah-blah...</p>
+                <p class="notice">By signing up you agree blah-blah-blah...</p>
                 <button type="submit">Sign up</button>
+            </form>
+        </div>
+        <div class="login-form">
+            <h1 data-tab="restore">Password reset</h1>
+            <form method="POST" action="/user/reset">
+                <label for="username">Username</label>
+                <input name="username" type="text" />
+                <p class="notice">&mdash; or &mdash;</p>
+                <label for="email">Email</label>
+                <input name="email" type="email" />
+                <p class="notice">You'll receive further instructions by mail.</p>
+                <button type="submit">Reset</button>
             </form>
         </div>
     </div>
