Allow to Tab into the chat instantly.

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,8 +1,8 @@
 <nav>
     <a href="/" class="brand">webmcast</a>
     <div class="search"><input type="text" placeholder="Search???" /></div>
-    <a class="login">Log in</a>
-    <a class="signup">Sign up</a>
+    <a tabindex="0" class="login">Log in</a>
+    <a tabindex="0" class="signup">Sign up</a>
 </nav>
 
 <template id="login-form">
