--- a/templates/room.html
+++ b/templates/room.html
@@ -73,11 +73,11 @@
             </template>
             <div class="offline-message">Chat offline.</div>
             <form class="login-form">
-                <input type="text" class="input" placeholder="What's your name?" />
+                <input tabindex="1" type="text" class="input" placeholder="What's your name?" />
                 <button type="submit">Join</button>
             </form>
             <form class="input-form">
-                <textarea class="input" cols="1" rows="2" placeholder="Write a message"></textarea>
+                <textarea tabindex="1" class="input" cols="1" rows="2" placeholder="Write a message"></textarea>
                 <button type="submit">Send</button>
                 <a class="button ins-emoji" title="Emoji..."></a>
             </form>
