--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class="center-block">
     <a href="/" class="brand">webmcast</a>
     <div class="search"><input type="text" placeholder="Search???" /></div>
     <a tabindex="0" class="login">Log in</a>
