Implement logging in and out.
Obviously, this code is still unreachable because an anonymous
database is used by default. Not to mention there's no endpoint
for signing up.

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -218,6 +218,13 @@ nav .search {
     flex: 1;
 }
 
+nav[data-user] .login,
+nav[data-user] .signup,
+nav:not([data-user]) .userinfo,
+nav:not([data-user]) .logout {
+    display: none;
+}
+
 @media (max-width: 50em) {
     nav .search input {
         display: none;
