--- a/templates/noscript-user-new.html
+++ b/templates/noscript-user-new.html
@@ -11,7 +11,7 @@
             {{ template "nav.html" }}
             <div class="noscript-form-wrapper">
                 <section class="login-form center-block">
-                    {{ template "form-user-login.html" }}
+                    {{ template "form-user-new.html" }}
                 </section>
             </div>
             {{ template "footer.html" }}
