--- a/templates/room.html
+++ b/templates/room.html
@@ -11,7 +11,7 @@
         <article class="content" data-scrollbar>
             {{ template "nav.html" . }}
 
-            <section class="player-block">
+            <section class="player-block section-highlight">
             {{ if not .Stream }}
                 <div class="player has-video" data-status="error">
                     <svg width="853" height="480"></svg>
