--- a/templates/noscript-user-restore.html
+++ b/templates/noscript-user-restore.html
@@ -9,11 +9,9 @@
     <body>
         <article class="content" data-scrollbar>
             {{ template "nav.html" }}
-            <div class="noscript-form-wrapper">
-                <section class="login-form center-block">
-                    {{ template "form-user-restore.html" }}
-                </section>
-            </div>
+            <section class="login-form center-block center-block-small">
+                {{ template "form-user-restore.html" }}
+            </section>
             {{ template "footer.html" }}
         </article>
     </body>
