Force textareas to fit their containers horizontally.

--- a/templates/user-cfg.html
+++ b/templates/user-cfg.html
@@ -70,7 +70,7 @@
                         <label for="password">New password</label>
                         <input name="password" type="password" placeholder="Leave empty to keep the old one." />
                         <label for="about">About yourself</label>
-                        <textarea name="about" rows="6" cols="40">{{.User.About}}</textarea>
+                        <textarea name="about" rows="6">{{.User.About}}</textarea>
                         <button type="submit">Update</button>
                     </form>
                 </section>
