--- a/templates/form-user-login.html
+++ b/templates/form-user-login.html
@@ -4,6 +4,7 @@
     <input name="username" type="text" />
     <label for="password">Password</label>
     <input name="password" type="password" />
+    <p class="error"></p>
     <a class="go-to-restore" href="/user/restore">Trouble logging in?</a>
     <button type="submit">Log in</button>
 </form>
