--- a/templates/form-user-new.html
+++ b/templates/form-user-new.html
@@ -8,5 +8,6 @@
     <input name="email" type="email" />
     {{/* todo: recaptcha, tos, privacy policy */}}
     <p class="notice">By signing up you agree blah-blah-blah...</p>
+    <p class="error"></p>
     <button type="submit">Sign up</button>
 </form>
