--- a/templates/form-user-restore.html
+++ b/templates/form-user-restore.html
@@ -6,5 +6,6 @@
     <label for="email">Email</label>
     <input name="email" type="email" />
     <p class="notice">You'll receive further instructions by mail.</p>
+    <p class="error"></p>
     <button type="submit">Reset</button>
 </form>
