--- a/templates/nav.html
+++ b/templates/nav.html
@@ -11,7 +11,7 @@
 
 {{ if . }}
 <template id="login-form">
-    <div data-tabs="login">
+    <div data-tabs="login" class="with-bg">
         <div class="login-form">
             {{ template "form-user-login.html" }}
         </div>
