--- a/templates/form-user-login.html
+++ b/templates/form-user-login.html
@@ -1,9 +1,9 @@
 <h2 data-tab="login">Log in</h2>
 <form method="POST" action="/user/login">
     <label for="username">Username</label>
-    <input name="username" type="text" />
+    <input name="username" type="text" required />
     <label for="password">Password</label>
-    <input name="password" type="password" />
+    <input name="password" type="password" required />
     <p class="error"></p>
     <a class="go-to-restore" href="/user/restore">Trouble logging in?</a>
     <button type="submit">Log in</button>
