--- a/templates/form-user-new.html
+++ b/templates/form-user-new.html
@@ -1,13 +1,13 @@
 <h2 data-tab="signup">Sign up</h2>
 <form method="POST" action="/user/new">
     <label for="username">Username</label>
-    <input name="username" type="text" required />
+    <input name="username" type="text" required tabindex="1" />
     <label for="password">Password</label>
-    <input name="password" type="password" required />
+    <input name="password" type="password" required tabindex="1" />
     <label for="email">Email</label>
-    <input name="email" type="email" required />
+    <input name="email" type="email" required tabindex="1" />
     {{/* todo: recaptcha, tos, privacy policy */}}
     <p class="notice">By signing up you agree blah-blah-blah...</p>
     <p class="error"></p>
-    <button type="submit">Sign up</button>
+    <button type="submit" tabindex="1">Sign up</button>
 </form>
